Fixed photo images not covering the container

--- a/client/src/stylesheets/Login.css
+++ b/client/src/stylesheets/Login.css
@@ -269,8 +269,11 @@ input::placeholder {
 }
 
 #container-image {
-    flex: 1;
-    align-self: stretch;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #login_image {
