--- a/client/src/stylesheets/Signup.css
+++ b/client/src/stylesheets/Signup.css
@@ -41,15 +41,11 @@ body, main {
 }
 
 #photo-container {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-
-    flex: 1;
-    align-self: stretch;
 }
 
 #page-image {
